# TTS-Gateway

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
assets/: demo.tape  hook.tape
docs/: api.md  architecture.md  configuration.md  development.md  installation.md  providers.md  releasing.md
docs/samples/: index.html
examples/: README.md  curl.sh  openai_compat.py  python_client.py  websocket_client.py
integrations/browser/: README.md  tts-daemon.user.js  tts-gateway.user.js
integrations/claude-code/: README.md  claude_code_speak.py
scripts/: check_version.py  install.sh  make_samples.sh  release_notes.py
src/tts_daemon/: __init__.py  __main__.py  cli.py  client.py  config.py  defaults.py  voices.py
src/tts_daemon/api/: __init__.py  app.py  auth.py  event_bridge.py  http.py  openai_compat.py  schemas.py  websocket.py
src/tts_daemon/api/static/: index.html
src/tts_daemon/core/: audio.py  cache.py  chunking.py  errors.py  events.py  interfaces.py  queue.py  service.py
src/tts_daemon/players/: __init__.py  command.py  null.py  winsound_player.py
src/tts_daemon/providers/: __init__.py  _audio.py  edge.py  kokoro.py  piper.py  registry.py  tone.py
src/tts_gateway/: __init__.py  __main__.py  cli.py  client.py  config.py  defaults.py
src/tts_gateway/api/: __init__.py  app.py  http.py  schemas.py  websocket.py
src/tts_gateway/core/: __init__.py  events.py  interfaces.py  models.py  queue.py  service.py
src/tts_gateway/players/: __init__.py  command.py  null.py  winsound_player.py
src/tts_gateway/providers/: __init__.py  piper.py  registry.py  tone.py
tests/: conftest.py
tests/integration/: test_auth.py  test_claude_code_hook.py  test_cli.py  test_http_api.py  test_openai_compat.py  test_sse.py  test_websocket.py
tests/unit/: test_cache.py  test_chunking.py  test_client.py  test_config.py  test_edge.py  test_events.py  test_kokoro.py  test_kokoro_download.py  test_models.py  test_piper.py  test_players.py  test_queue.py  test_queue_chunking.py  test_registry.py  test_service.py  test_service_cache.py  test_tone.py  test_voices.py  test_winsound_player.py
