[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-daemon"
version = "0.1.0"
description = "Local HTTP/WebSocket Text-to-Speech gateway with pluggable providers (Piper first)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TTS Daemon contributors" }]
keywords = ["tts", "text-to-speech", "piper", "speech", "gateway", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
# Free Microsoft neural voices (cloud, unofficial API); see providers/edge.py.
edge = [
    "edge-tts>=6.1",
]
# Local high-quality neural TTS via ONNX Runtime; see providers/kokoro.py.
kokoro = [
    "kokoro-onnx>=0.3",
]

[project.urls]
Homepage = "https://github.com/DMGiulioRomano/TTS-Daemon"
Documentation = "https://github.com/DMGiulioRomano/TTS-Daemon/tree/main/docs"
Issues = "https://github.com/DMGiulioRomano/TTS-Daemon/issues"
Changelog = "https://github.com/DMGiulioRomano/TTS-Daemon/blob/main/CHANGELOG.md"

[project.scripts]
tts-daemon = "tts_daemon.cli:main"

[project.entry-points."tts_daemon.providers"]
piper = "tts_daemon.providers.piper:PiperProvider"
tone = "tts_daemon.providers.tone:ToneProvider"
edge = "tts_daemon.providers.edge:EdgeProvider"
kokoro = "tts_daemon.providers.kokoro:KokoroProvider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tts_daemon.api" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning:tts_daemon.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "SIM108", # ternary is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]
