[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-daemon"
version = "0.2.0"
description = "Local HTTP/WebSocket Text-to-Speech gateway with pluggable providers (Piper first)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TTS Daemon contributors" }]
keywords = ["tts", "text-to-speech", "piper", "speech", "gateway", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    # uvicorn cannot serve /v1/ws (nor the playground event stream) without a
    # WebSocket implementation; uvicorn[standard] would also pull in httptools,
    # uvloop and watchfiles, which the gateway does not use.
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
# Free Microsoft neural voices via the edge-tts package (cloud, unofficial API).
# Optional so the gateway never requires it; the provider lazy-imports it.
edge = [
    "edge-tts>=6.1",
]
# Local neural TTS via kokoro-onnx (ONNX Runtime, CPU-friendly). Optional so the
# gateway never requires it; the provider lazy-imports it. Needs a model and a
# voices file downloaded separately (see docs/providers.md). The environment
# marker keeps `pip install 'tts-daemon[kokoro]'` from failing on Python versions
# kokoro-onnx does not support yet (it requires <3.14): there the extra is a
# no-op and availability() reports the package as missing.
kokoro = [
    "kokoro-onnx>=0.4; python_version < '3.14'",
]

[project.urls]
Homepage = "https://github.com/DMGiulioRomano/TTS-Daemon"
Documentation = "https://github.com/DMGiulioRomano/TTS-Daemon/tree/main/docs"
Issues = "https://github.com/DMGiulioRomano/TTS-Daemon/issues"
Changelog = "https://github.com/DMGiulioRomano/TTS-Daemon/blob/main/CHANGELOG.md"

[project.scripts]
tts-daemon = "tts_daemon.cli:main"

[project.entry-points."tts_daemon.providers"]
piper = "tts_daemon.providers.piper:PiperProvider"
tone = "tts_daemon.providers.tone:ToneProvider"
edge = "tts_daemon.providers.edge:EdgeProvider"
kokoro = "tts_daemon.providers.kokoro:KokoroProvider"
openai = "tts_daemon.providers.openai_tts:OpenAITTSProvider"
elevenlabs = "tts_daemon.providers.elevenlabs:ElevenLabsProvider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tts_daemon.api" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error::DeprecationWarning:tts_daemon.*",
    # External and tracked (issue #19): Starlette's TestClient warns that using
    # `httpx` (rather than "httpx2") is deprecated. It is a
    # StarletteDeprecationWarning — a UserWarning subclass, so the rule above
    # never matched it. Ignore it by message to keep the run warning-free; drop
    # this once a Starlette release supports httpx2 and the dev `httpx` can move.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
markers = [
    "real_entry_points: let the registry discover installed entry-point plugins",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "SIM108", # ternary is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]
